# babbage

./: config-example.yaml  pyproject.toml
babbage/: __main__.py  badge.py  cards.py  hass.py  render.py  server.py  utils.py
babbage/templates/: GaugeCard.partial.html  HeadingCard.partial.html  PanelView.html  SectionsView.html  TileCard.partial.html  UnknownCard.partial.html  WeatherForecastCard.partial.html  badge.html  dashboard.html  dashboard.js  section.html  titlebar.html
